--- a/app/src/main/res/layout/pantalla_principal.xml
+++ b/app/src/main/res/layout/pantalla_principal.xml
@@ -3,7 +3,7 @@
 
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="500dp"
+    android:layout_height="300dp"
     android:layout_alignParentTop="true"
     android:layout_centerInParent="true"
     android:layout_centerHorizontal="true"
@@ -20,22 +20,22 @@
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="match_parent"
-        android:layout_height="59dp"
+        android:layout_width="300dp"
+        android:layout_height="20dp"
         android:layout_weight="1"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="TextView" />
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="30dp"
         android:layout_weight="1"
         android:text="Button" />
 </LinearLayout>
