--- a/app/src/main/res/layout/pantalla_principal.xml
+++ b/app/src/main/res/layout/pantalla_principal.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="300dp"
@@ -33,9 +34,16 @@
         android:text="TextView" />
 
     <Button
-        android:id="@+id/button3"
-        android:layout_width="200dp"
-        android:layout_height="30dp"
+        android:id="@+id/button2"
+        android:layout_width="59dp"
+        android:layout_height="2dp"
         android:layout_weight="1"
-        android:text="Button" />
+        android:backgroundTint="#BD4242"
+        android:text="Ver Detalle"
+        android:layout_gravity="right"
+        android:textColorLink="#7A0C4E"
+
+        android:textSize="8sp" />
+
+
 </LinearLayout>
