--- a/app/src/main/res/layout/activity_detalles.xml
+++ b/app/src/main/res/layout/activity_detalles.xml
@@ -88,7 +88,7 @@
         android:id="@+id/agregarComentarioDetalles"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Bittons"
+        android:text="Comentar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
