--- a/app/src/main/res/layout/item_comentarios_rv.xml
+++ b/app/src/main/res/layout/item_comentarios_rv.xml
@@ -5,21 +5,24 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/dateComentarioDetalles"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/comentario"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/textComentarioDetalles"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="6dp"
-        android:maxLines="5"
-        android:text="@string/bodycomentariodetalles" />
+        <TextView
+            android:id="@+id/dateComentarioDetalles"
+            android:layout_width="100sp"
+            android:layout_height="wrap_content"
+            android:text="@string/comentario" />
+
+        <TextView
+            android:id="@+id/textComentarioDetalles"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:maxLines="5"
+            android:text="@string/bodycomentariodetalles" />
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
