--- a/app/src/main/res/layout/pantalla_principal.xml
+++ b/app/src/main/res/layout/pantalla_principal.xml
@@ -12,38 +12,56 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="128dp"
-        android:layout_height="15dp"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="11dp"
         android:layout_weight="1"
-        android:text="TextView" />
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="TextView" />
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="right"
+                android:layout_weight="1"
+                android:backgroundTint="#BD4242"
+                android:text="Ver Detalle"
+                android:textColorLink="#7A0C4E"
+
+                android:textSize="8sp" />
+
+        </LinearLayout>
+
+
+    </LinearLayout>
+
 
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="300dp"
-        android:layout_height="20dp"
+        android:layout_height="175dp"
         android:layout_weight="1"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="300dp"
-        android:layout_height="wrap_content"
+        android:layout_height="5dp"
         android:layout_weight="1"
         android:text="TextView" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="59dp"
-        android:layout_height="2dp"
-        android:layout_weight="1"
-        android:backgroundTint="#BD4242"
-        android:text="Ver Detalle"
-        android:layout_gravity="right"
-        android:textColorLink="#7A0C4E"
-
-        android:textSize="8sp" />
 
 
 </LinearLayout>
