Corregir detalles visibilidad.

--- a/app/src/main/res/menu/menu_principal.xml
+++ b/app/src/main/res/menu/menu_principal.xml
@@ -9,5 +9,12 @@
         android:icon="@drawable/ic_add"
         />
 
+    <item
+        android:id="@+id/MenuPrincipal_Logout"
+        android:title="Desconectarse"
+        app:showAsAction="always" />
+
+
+
 
 </menu>
